4  commit producto config-data

--- a/validarcliente/src/main/resources/application-docker.yml
+++ b/validarcliente/src/main/resources/application-docker.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: validarcliente
+    name: validarclientecheck
   config:
     import: "optional:configserver:http://config-server:8090"
   cloud:
