--- a/validarcliente/src/main/resources/application.yml
+++ b/validarcliente/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: validarcliente
+    name: validarclientecheck
   config:
     import: "optional:configserver:"
   cloud:
