--- a/validarproducto/pom.xml
+++ b/validarproducto/pom.xml
@@ -80,6 +80,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
+        <!--PARA LLAMAR AL CONFIGSERVER MICROSERVICIO PADRE-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <!--PARA LLAMAR AL CONFIGSERVER MICROSERVICIO PADRE-->
         <!--Esto viene de productoFeign para unir al microservicio validarproducto-->
         <dependency>
             <groupId>pe.com.nttdata</groupId>
