Update producto config-data names

--- a/config-data/default/producto.yml
+++ b/config-data/default/producto.yml
@@ -51,7 +51,7 @@ resilience4j:
   circuitbreaker:
     circuit-breaker-aspect-order: 1
     instances:
-      validarclienteCB:
+      validarproductoCB:
         registerHealthIndicator: true
         eventConsumerBufferSize: 10
         failureRateThreshold: 50
@@ -64,7 +64,7 @@ resilience4j:
   retry:
     retry-aspect-order: 2
     instances:
-      validarclienteRetry:
+      validarproductoRetry:
         registerHealthIndicator: true
         maxRetryAttempts: 5
         waitDuration: 5s
