update ProductoFeign name

--- a/productofeign/src/main/resources/productofeign-docker.properties
+++ b/productofeign/src/main/resources/productofeign-docker.properties
@@ -1,3 +1,3 @@
-productofeign.validarproductocheck.url=http://localhost:8085
-productofeign.notificacionproducto.url=http://localhost:8087
-productofeign.producto.url=http://localhost:8084
+productofeign.validarproductocheck.url=http://validarproductocheck:8085
+productofeign.notificacionproducto.url=http://notificacionproducto:8087
+productofeign.producto.url=http://producto:8084
