--- a/autenticacion/pom.xml
+++ b/autenticacion/pom.xml
@@ -8,11 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <!--PARA GENERAR EL JAR O EMPAQUE-->
     <packaging>jar</packaging>
-    <!--PARA GENERAR EL JAR O EMPAQUE-->
-    <artifactId>apigateway</artifactId>
-    <!--HIJO UTILIZA EL POM  DEL PADRE PARA COMPILAR-->
+    <artifactId>autenticacion</artifactId>
     <build>
         <plugins>
             <plugin>
@@ -21,18 +18,7 @@
             </plugin>
         </plugins>
     </build>
-    <!--HIJO UTILIZA EL POM  DEL PADRE PARA COMPILAR-->
 
-    <!--LO DEL PROPERTIES SE BORRAR O LO COMENTAMOS-->
-    <!--
-    <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
-    </properties>
-    -->
-    <!--LO DEL PROPERTIES SE BORRAR O LO COMENTAMOS-->
-
-    <!--1.1.3-REFERENCIA AL PADRE PARA EL DEPLOY DOCKER HUB-->
     <profiles>
         <profile>
             <id>build-docker-image</id>
@@ -46,15 +32,27 @@
             </build>
         </profile>
     </profiles>
-    <!--1.1.3-REFERENCIA AL PADRE PARA EL DEPLOY DOCKER HUB-->
+    <!--
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
+-->
 
     <dependencies>
-
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -67,14 +65,30 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
-        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientConfig-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientConfig-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <!--TIENE QUE SER ACCEDIDO DESDE SPRING-->
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!--TIENE QUE SER ACCEDIDO DESDE SPRING-->
+
+        <!--Llamamos a la libreria del clientefeign-->
+        <dependency>
+            <groupId>pe.com.nttdata</groupId>
+            <artifactId>clientefeign</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
 
 </project>
