--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>productofeign</module>
 		<module>productoqueues</module>
         <module>config-server</module>
+        <module>autenticacion</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
