--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
+        <!-- CONFIG_SERVER-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <!-- CONFIG_SERVER-->
     </dependencies>
 
 </project>
