--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - spring
     depends_on:
       - zipkin
+      - config-server
   apigateway:
     image: sergiogf/apigateway:latest
     container_name: apigateway
@@ -65,6 +66,7 @@ services:
     depends_on:
       - zipkin
       - eureka-server
+      - config-server
   cliente:
     image: sergiogf/cliente:latest
     container_name: cliente
