--- a/config-data/kube/producto.yml
+++ b/config-data/kube/producto.yml
@@ -33,6 +33,8 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
 #    enabled: false
+  instance:
+    prefer-ip-address: true
 #CIRCUR BREAKER OPCIONAL
 management:
   health:
