--- a/apigatewayproduct/pom.xml
+++ b/apigatewayproduct/pom.xml
@@ -66,12 +66,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
-        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientConfig-->
+        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientProductConfig-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientConfig-->
+        <!--PARA PROGRAMACION REACTIVA con la Carpeta Config- WebClientProductConfig-->
 
     </dependencies>
 </project>
