--- a/cliente/pom.xml
+++ b/cliente/pom.xml
@@ -81,6 +81,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <!--KAFKA-->
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <!--KAFKA-->
+
         <!--CIRCUR BRAKER-->
 
         <dependency>
