--- a/clientefeign/src/main/resources/clientefeign-default.properties
+++ b/clientefeign/src/main/resources/clientefeign-default.properties
@@ -1,4 +1,5 @@
 clientefeign.cliente.url=http://localhost:8083
 clientefeign.validarclientecheck.url=http://localhost:8082
 clientefeign.notificacion.url=http://localhost:8086
+clientefeign.notificacionkafka.url=http://localhost:8096
 #clientefeign.producto.url=http://localhost:8084
