Kafka LocalHost-Microservicio-Impple

--- a/clientefeign/src/main/resources/clientefeign-docker.properties
+++ b/clientefeign/src/main/resources/clientefeign-docker.properties
@@ -1,4 +1,5 @@
 clientefeign.cliente.url=http://cliente:8083
 clientefeign.validarclientecheck.url=http://validarcliente:8082
 clientefeign.notificacion.url=http://notificacion:8086
+clientefeign.notificacionkafka.url=http://localhost:8093
 
