--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
         <module>autenticacion</module>
         <module>autenticationproduct</module>
 		<module>apigatewayproduct</module>
-	</modules>
+        <module>notificacionkafka</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
