--- a/clientefeign/src/main/resources/clientefeign-kube.properties
+++ b/clientefeign/src/main/resources/clientefeign-kube.properties
@@ -1,4 +1,5 @@
 clientefeign.cliente.url=http://cliente:8081
 clientefeign.validarclientecheck.url=http://validarclientecheck:8081
 clientefeign.notificacion.url=http://notificacion:8081
+clientefeign.notificacionkafka.url=http://localhost:8093
 #clientefeign.producto.url=http://producto:8081
