--- a/productofeign/src/main/resources/productofeign-default.properties
+++ b/productofeign/src/main/resources/productofeign-default.properties
@@ -1,3 +1,4 @@
 productofeign.validarproductocheck.url=http://localhost:8085
 productofeign.notificacionproducto.url=http://localhost:8087
 productofeign.producto.url=http://localhost:8084
+productofeign.notificationkafkaproduct.url=http://localhost:8094
