--- a/productofeign/src/main/resources/productofeign-docker.properties
+++ b/productofeign/src/main/resources/productofeign-docker.properties
@@ -1,3 +1,4 @@
 productofeign.validarproductocheck.url=http://validarproductocheck:8085
 productofeign.notificacionproducto.url=http://notificacionproducto:8087
 productofeign.producto.url=http://producto:8084
+productofeign.notificationkafaproduct.url=http://localhost:8094
