--- a/productofeign/src/main/resources/productofeign-kube.properties
+++ b/productofeign/src/main/resources/productofeign-kube.properties
@@ -2,3 +2,4 @@
 productofeign.validarproductocheck.url=http://validarproductocheck:8081
 productofeign.notificacionproducto.url=http://notificacionproducto:8081
 productofeign.producto.url=http://producto:8081
+productofeign.notificationkafaproduct.url=http://localhost:8094
